# hexlet_test

./: README.md  pyproject.toml
tests/: test_stack.py
