[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["Vladimir Ustyanivsky <bender1102@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
